Fixed a ui bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,9 @@ h1 {
   color: var(--clr-white);
   text-align: center;
   align-self: end;
-  font-size: clamp(1rem, 1.667vw, 2rem);
+  font-size: clamp(1.25rem, 1.667vw, 2rem);
+  padding-inline: 2rem;
+  line-height: 1.3;
 }
 
 .background {
@@ -51,6 +53,11 @@ h1 {
 
 .time-unit {
   font-size: clamp(0.5rem, 0.972vw, 1rem);
+}
+
+.social-links {
+  align-self: end;
+  margin-bottom: clamp(3rem, 4.722vw, 4.5rem); /* 4.25rem */
 }
 
 @font-face {
